--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1202,7 +1202,7 @@ var display = (async function(){
 	//document.getElementById("r" & _i).appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
-	document.getElementById('a' + i).innerHTML = "swap completed " + latest);
+	document.getElementById('a' + i).innerHTML = "swap completed " + latest;
 	
 	
 	//console.log(_image2);
