--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -65,10 +65,8 @@ font-size: large;
 
 
 <body>
-<center><img id="logo" src=logoCapture.PNG></img></center>
-<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:25;" onClick="connect_metamask()">
-          Connect
-        </Button>
+<center><img id="logo" src=barterNFT_logo.PNG></img></center>
+
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()">offer trade</button>
 <center><p id="contract_address_ID"></p></center>
 
@@ -82,6 +80,9 @@ font-size: large;
 
 
 <script>
+//<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:25;" onClick="connect_metamask()">
+          //Connect
+        //</Button>
 //<meta http-equiv="Content-Type" content="text/plain"; Charset=UTF-8">
 //<div id="root"></div>
 function open_window() {
