--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -65,7 +65,7 @@ font-size: large;
 
 
 <body>
-<center><img id="logo" src=barterNFT_logo.PNG></img></center>
+<center><img id="logo" src=barterNFT_logo.png></img></center>
 
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()">offer trade</button>
 <center><p id="contract_address_ID"></p></center>
