--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1213,9 +1213,9 @@ var _image = (async function(){
 			
 			var result = xhttp.response;
 			
-			JSONresult = JSON.parse(result);
+			//JSONresult = JSON.parse(result);
 			
-			//JSONresult = result
+			JSONresult = result
 			
 			//console.log(JSONresult.image);
 			//var result1 = JSONresult.image
