--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1213,20 +1213,20 @@ var _image = (async function(){
 			
 			var result = xhttp.response;
 			
-			//JSONresult = JSON.parse(result);
+			JSONresult = JSON.parse(result);
 			
-			JSONresult = result
+			//JSONresult = result
 			
 			//console.log(JSONresult.image);
 			//var result1 = JSONresult.image
 			//return result1
 			var image_ = JSONresult.image
-			var img = new Image();
+			//var img = new Image();
 			//'https://ipfs.io/ipfs/' + lnk.slice(7)
 			if (JSONresult.image.substring(0,4) == "ipfs"){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
-            img.src = image_
+            //img.src = image_
             //ew1Div.appendChild(img);
 			document.getElementById("content1").innerHTML = image_
 			console.log(image_)
@@ -1243,18 +1243,20 @@ var _image = (async function(){
 			
 			JSONresult = JSON.parse(result);
 			
+			const contentType = result.headers.get("content-type");
+			console.log(contentType)
 			//JSONresult = result
 			
 			//console.log(JSONresult.image);
 			//var result1 = JSONresult.image
 			//return result1
 			var image_ = JSONresult.image
-			var img = new Image();
+			//var img = new Image();
 			//'https://ipfs.io/ipfs/' + lnk.slice(7)
 			if (JSONresult.image.substring(0,4) == "ipfs"){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
-            img.src = image_
+            //img.src = image_
             //ew1Div.appendChild(img);
 			document.getElementById("content2").innerHTML = image_
 			console.log(image_)
