--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1241,7 +1241,7 @@ var _image = (async function(){
 			
 			var result = xhttp.response;
 			
-			JSONresult = JSON.parse(result);
+			//JSONresult = JSON.parse(result);
 			
 			const contentType = result.headers.get("content-type");
 			console.log(contentType)
