--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1243,7 +1243,7 @@ var _image = (async function(){
 			
 			//JSONresult = JSON.parse(result);
 			
-			const contentType = result.headers.get("content-type");
+			const contentType = result.getResponseHeader();
 			console.log(contentType)
 			//JSONresult = result
 			
