--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1239,12 +1239,12 @@ var _image = (async function(){
 	function getImage1(xhttp){
 			//var result = xhttp.response;
 			
-			var result = xhttp.response;
+			var result = xhttp.responseType;
 			
 			//JSONresult = JSON.parse(result);
 			
-			const contentType = result.getResponseHeader();
-			console.log(contentType)
+			//const contentType = result.getResponseHeader();
+			console.log(result)
 			//JSONresult = result
 			
 			//console.log(JSONresult.image);
