--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1217,7 +1217,7 @@ var _image = (async function(){
 			
 			JSONresult = result
 			
-			//console.log(JSONresult.image);
+			console.log(JSONresult);
 			//var result1 = JSONresult.image
 			//return result1
 			var image_ = JSONresult.image
