--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1213,9 +1213,9 @@ var _image = (async function(){
 			
 			var result = xhttp.response;
 			
-			//JSONresult = JSON.parse(result);
+			JSONresult = JSON.parse(result);
 			
-			JSONresult = result
+			//JSONresult = result
 			
 			console.log(JSONresult);
 			//var result1 = JSONresult.image
@@ -1239,9 +1239,9 @@ var _image = (async function(){
 	function getImage1(xhttp){
 			//var result = xhttp.response;
 			
-			var result = xhttp.responseType;
+			var result = xhttp.response;
 			
-			//JSONresult = JSON.parse(result);
+			JSONresult = JSON.parse(result);
 			
 			//const contentType = result.getResponseHeader();
 			console.log(result)
