--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -65,7 +65,7 @@ font-size: large;
 
 
 <body>
-<center><img style="width = 300 height = 300" id="logo" src=barterNFT_logo.png></img></center>
+<center><img id="logo" src=barterNFT_logo.png></img></center>
 
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()">offer trade</button>
 <center><p id="contract_address_ID"></p></center>
@@ -1199,7 +1199,7 @@ var display = (async function(){
 	//newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + "," + _i + ')');
 	newBtn.setAttribute('onclick', 'to_approve(' + "[" + array_contract_ID2 + "]" + ","  + "'" + address + "'" + ", [" + array_tokenID2 + "]," + _i + ')');
 	//console.log('make_trade(' + "'" + array_contract_ID2 + "'" + ","  + "'" + address + "'" + "," + array_tokenID2 + ')')
-	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute;left:50%;";
+	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large;";
 	
 	newBtn.id = 'a' + i;
 	
