--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1198,7 +1198,8 @@ var _image = (async function(){
 		}
 		
 		try {
-			var image = await image_and_name(contract_ID2, tokenID2, getImage1);
+			//var image = await image_and_name(contract_ID2, tokenID2, getImage1);
+			canvas_3 (contract_ID2, tokenID2)
 			}
 		catch(err){
 			canvas_3 (contract_ID2, tokenID2)
