--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1560,6 +1560,7 @@ function image_and_name(k,n, getImage){
     xhttp.open("GET", lnk, false);
 	xhttp.setRequestHeader('Access-Control-Allow-Origin', '*');
 	xhttp.setRequestHeader('Access-Control-Allow-Headers', '*');
+	xhttp.setRequestHeader('Access-Control-Expose-Headers', 'Content-Length, X-JSON');
 	xhttp.setRequestHeader('Access-Control-Allow-Methods', 'GET, POST, PATCH, PUT, DELETE, OPTIONS');
 	xhttp.setRequestHeader('Access-Control-Allow-Headers', 'Origin, Content-Type, X-Auth-Token');
 	//xhttp.setRequestHeader('Content-type', 'image/jpeg');
