--- a/moralis_cloud_function.html
+++ b/moralis_cloud_function.html
@@ -23,7 +23,26 @@
       const serverUrl = "https://jgvwtbhpz221.usemoralis.com:2053/server";
       const appId = "jWYZTSxykRh5PsXRtoXPWu3coM5QDQAWJCwvXR51";
       Moralis.start({ serverUrl, appId });
+	  
+	  getMetaData = async () => {
+	
+	let url = document.getElementById('input-search').value
+	
+	let metadata = await fetch('https://nft.babyswap.shop/55474.json')
+	.then(response => response.json())
+	.then(data = console.log(data));
+}
 
+cloudMeta = async () => {
+	
+	let url = document.getElementById('input-search').value
+	const params { theUrl: url }
+	const metadata = await Moralis.Cloud.run("fetchJSON", params);
+	console.log(metadata);
+	
+	
+}
+	
     </script>
   </body>
 </html>
