--- a/moralis_cloud_function.html
+++ b/moralis_cloud_function.html
@@ -24,7 +24,7 @@
       const appId = "jWYZTSxykRh5PsXRtoXPWu3coM5QDQAWJCwvXR51";
       Moralis.start({ serverUrl, appId });
 	  
-	  getMetaData = async () => {
+	  const getMetaData = async () => {
 	
 	let url = document.getElementById('input-search').value
 	
@@ -33,7 +33,7 @@
 	.then(data = console.log(data));
 }
 
-cloudMeta = async () => {
+const cloudMeta = async () => {
 	
 	let url = document.getElementById('input-search').value
 	const params { theUrl: url }
@@ -42,7 +42,6 @@ cloudMeta = async () => {
 	
 	
 }
-	
     </script>
   </body>
 </html>
