--- a/moralis_cloud_function.html
+++ b/moralis_cloud_function.html
@@ -39,8 +39,8 @@ return 1
 function cloudMeta_(){
 var cloudMeta = async () => {
 	
-	let url = document.getElementById('input-search').value
-	const params { theUrl: url }
+	var url = document.getElementById('input-search').value
+	const params { 'theUrl': url };
 	const metadata = await Moralis.Cloud.run("fetchJSON", params);
 	console.log(metadata);
 	
