--- a/moralis_cloud_function.html
+++ b/moralis_cloud_function.html
@@ -8,8 +8,8 @@
     <h1>Search Metadata</h1>
 
     <input type="text" size="50" id="input-search" placeholder="your url">
-    <button onclick=getMetaData() id="btn-search" type="submit">Regular</button>
-	<button onclick=cloudMeta() id="btn-search" type="submit">Cloud</button>
+    <button onclick=getMetaData_1() id="btn-search" type="submit">Regular</button>
+	<button onclick=cloudMeta_() id="btn-search" type="submit">Cloud</button>
 	<p>https://nft.babyswap.shop/55474.json</p>
 	<hr>
 	<h2>The Content</h2>
@@ -23,7 +23,52 @@
       const serverUrl = "https://jgvwtbhpz221.usemoralis.com:2053/server";
       const appId = "jWYZTSxykRh5PsXRtoXPWu3coM5QDQAWJCwvXR51";
       Moralis.start({ serverUrl, appId });
+	
+		function getMetaData_(){
+	var getMetaData = async () => {
+	
+	var url = document.getElementById('input-search').value
+	
+	var metadata = await fetch('https://nft.babyswap.shop/55474.json')
+	.then(response => response.json())
+	.then(data = console.log(data));
+}
+return 1
+}
 
+
+	function getMetaData_1 (){
+var acct = (async function(){
+
+
+fetch('https://nft.babyswap.shop/55474.json', {'Access-Control-Allow-Origin': "*",
+'Access-Control-Allow-Headers': "*", "crossDomain": "true"
+}).then(response => response.blob())
+  .then(myBlob => {
+  var urlCreator = window.URL || window.webkitURL;
+   var imageUrl = urlCreator.createObjectURL(myBlob);
+   //const myImgElem = document.getElementById('my-img');
+   //var myImgElem = new Image;
+   console.log(imageUrl)
+   
+  
+})
+})()		
+	
+}
+
+function cloudMeta_(){
+var cloudMeta = async () => {
+	
+	var url = document.getElementById('input-search').value
+	const params { 'theUrl': url };
+	const metadata = await Moralis.Cloud.run("fetchJSON", params);
+	console.log(metadata);
+	
+	
+}
+return 1
+}
     </script>
   </body>
 </html>
