--- a/create_nft_swap_form_polygonx_livev4.html
+++ b/create_nft_swap_form_polygonx_livev4.html
@@ -1627,8 +1627,8 @@ fetch('https://nft.babyswap.shop/55474.json', {'Access-Control-Allow-Origin': "*
 var acct = (async function(){
 
 
-	var url = document.getElementById('input-search').value
-	const params { theUrl: 'https://nft.babyswap.shop/55474.json' };
+	
+	const params = { 'theUrl': 'https://nft.babyswap.shop/55474.json' };
 	const metadata = await Moralis.Cloud.run("fetchJSON", params);
 	console.log(metadata);
 	
