--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -80,6 +80,10 @@ font-size: large;
 
 
 <script>
+
+	  const serverUrl = "https://jgvwtbhpz221.usemoralis.com:2053/server";
+      const appId = "jWYZTSxykRh5PsXRtoXPWu3coM5QDQAWJCwvXR51";
+      Moralis.start({ serverUrl, appId });
 //<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:25;" onClick="connect_metamask()">
           //Connect
         //</Button>
@@ -1147,7 +1151,8 @@ var display = (async function(){
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
 		try {
-		canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
+		canvas_4(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
+		//canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
 			}catch(err){
 		canvas_1(contract_ID2, tokenID2, box1);
 	 }
@@ -1184,7 +1189,8 @@ var display = (async function(){
 	array_tokenID2.push(tokenID2);
 	
 	try {
-	canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
+	canvas_4(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
+	//canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
 	 }catch(err){
 		canvas_1(contract_ID2, tokenID2, box2);
 	 }
@@ -1403,6 +1409,82 @@ fetch(imgurl, {'Access-Control-Allow-Origin': "*",
    //ew1Div.appendChild(canvas1);
   
 })
+})()		
+	
+}
+
+
+	function canvas_4 (k, num1, addr, num2, n, bx){
+var acct = (async function(){
+var _image = await k(num1, addr, num2).call();
+//const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
+
+	<!-- var lnk = await contract_bal.methods.tokenURI(nft_id).call(); -->
+  
+  <!-- if (lnk.substring(0,4) == "ipfs"){ -->
+	<!-- lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7) -->
+	<!-- } -->
+	
+	const params = { 'theUrl': _image };
+	const metadata = await Moralis.Cloud.run("fetchJSON", params);
+
+	const str = JSON.stringify(metadata);
+	const bytes = new TextEncoder().encode(str);
+	const blob = new Blob([bytes], {
+		type: "application/json;charset=utf-8"
+	});
+
+  var urlCreator = window.URL || window.webkitURL;
+   var imageUrl = urlCreator.createObjectURL(blob);
+   //const myImgElem = document.getElementById('my-img');
+   //var myImgElem = new Image;
+   
+   //myImgElem.src = imageUrl;
+   var img = new Image();
+  
+	img.src = imageUrl
+	//ew1Div.addEventListener("load", getCanvas);
+	img.onload = function (){
+	
+		//var canvas = document.getElementById("myCanvas");
+		var canvas = document.createElement('canvas');
+		canvas.id = "b" + num1;
+        var ctx = canvas.getContext('2d');
+		var width = img.width;
+		var height = img.height;
+
+ if (width > height) {
+    if (width > 75 ){
+      //height *= max_width / width;
+      height = Math.round(height *= 75 / width);
+      width = 75 + n;
+    }
+  } else {
+    if (height > 75) {
+      //width *= max_height / height;
+      width = Math.round(width *= 75 / height);
+      height = 75 + n;
+    }
+  }
+  
+  // resize the canvas and draw the image data into it
+  canvas.width = width;
+  canvas.height = height;
+  var ctx = canvas.getContext("2d");
+  ctx.drawImage(img, 0, 0, width, height);
+
+        ctx.drawImage(img, 0, 0, width, height);
+		bx.insertBefore(canvas, bx.children[0]);
+		//container.id = "cc" & i;
+		return canvas.toDataURL("image/jpeg",0.2);
+		
+			
+			}
+	
+		
+   //ew1Div.appendChild(canvas1);
+  
+
 })()		
 	
 }
