--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -6,7 +6,9 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/master/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.js"></script>
-
+<!-- Moralis SDK code -->
+<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+<script src="https://unpkg.com/moralis/dist/moralis.js"></script>
 </script> 
   
 
@@ -80,13 +82,17 @@ font-size: large;
 
 
 <script>
+
+	  const serverUrl = "https://jgvwtbhpz221.usemoralis.com:2053/server";
+      const appId = "jWYZTSxykRh5PsXRtoXPWu3coM5QDQAWJCwvXR51";
+      Moralis.start({ serverUrl, appId });
 //<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:25;" onClick="connect_metamask()">
           //Connect
         //</Button>
 //<meta http-equiv="Content-Type" content="text/plain"; Charset=UTF-8">
 //<div id="root"></div>
 function open_window() {
-  var myWindow = window.open("create_nft_swap_form_polygonx_livev3.html", "offer trade");
+  var myWindow = window.open("create_nft_swap_form_polygonx_livev4.html", "offer trade");
 }             
 
 
@@ -1148,6 +1154,7 @@ var display = (async function(){
 	
 		try {
 		canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
+		//canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
 			}catch(err){
 		canvas_1(contract_ID2, tokenID2, box1);
 	 }
@@ -1185,6 +1192,7 @@ var display = (async function(){
 	
 	try {
 	canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
+	//canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
 	 }catch(err){
 		canvas_1(contract_ID2, tokenID2, box2);
 	 }
@@ -1199,7 +1207,7 @@ var display = (async function(){
 	//newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + "," + _i + ')');
 	newBtn.setAttribute('onclick', 'to_approve(' + "[" + array_contract_ID2 + "]" + ","  + "'" + address + "'" + ", [" + array_tokenID2 + "]," + _i + ')');
 	//console.log('make_trade(' + "'" + array_contract_ID2 + "'" + ","  + "'" + address + "'" + "," + array_tokenID2 + ')')
-	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute;left:50%;";
+	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large;";
 	
 	newBtn.id = 'a' + i;
 	
@@ -1403,6 +1411,82 @@ fetch(imgurl, {'Access-Control-Allow-Origin': "*",
    //ew1Div.appendChild(canvas1);
   
 })
+})()		
+	
+}
+
+
+	function canvas_4 (k, num1, addr, num2, n, bx){
+var acct = (async function(){
+var _image = await k(num1, addr, num2).call();
+//const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
+
+	var lnk = await contract_bal.methods.tokenURI(nft_id).call();
+  
+  if (lnk.substring(0,4) == "ipfs"){
+	lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7)
+	}
+	
+	const params = { 'theUrl': lnk };
+	const metadata = await Moralis.Cloud.run("fetchJSON", params);
+
+	const str = JSON.stringify(metadata.data.image);
+	const bytes = new TextEncoder().encode(str);
+	const blob = new Blob([bytes], {
+		type: "application/json;charset=utf-8"
+	});
+
+  var urlCreator = window.URL || window.webkitURL;
+   var imageUrl = urlCreator.createObjectURL(blob);
+   //const myImgElem = document.getElementById('my-img');
+   //var myImgElem = new Image;
+   
+   //myImgElem.src = imageUrl;
+   var img = new Image();
+  
+	img.src = imageUrl
+	//ew1Div.addEventListener("load", getCanvas);
+	img.onload = function (){
+	
+		//var canvas = document.getElementById("myCanvas");
+		var canvas = document.createElement('canvas');
+		canvas.id = "b" + num1;
+        var ctx = canvas.getContext('2d');
+		var width = img.width;
+		var height = img.height;
+
+ if (width > height) {
+    if (width > 75 ){
+      //height *= max_width / width;
+      height = Math.round(height *= 75 / width);
+      width = 75 + n;
+    }
+  } else {
+    if (height > 75) {
+      //width *= max_height / height;
+      width = Math.round(width *= 75 / height);
+      height = 75 + n;
+    }
+  }
+  
+  // resize the canvas and draw the image data into it
+  canvas.width = width;
+  canvas.height = height;
+  var ctx = canvas.getContext("2d");
+  ctx.drawImage(img, 0, 0, width, height);
+
+        ctx.drawImage(img, 0, 0, width, height);
+		bx.insertBefore(canvas, bx.children[0]);
+		//container.id = "cc" & i;
+		return canvas.toDataURL("image/jpeg",0.2);
+		
+			
+			}
+	
+		
+   //ew1Div.appendChild(canvas1);
+  
+
 })()		
 	
 }
