--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1149,11 +1149,12 @@ var display = (async function(){
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
+	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
 	//console.log(contract_ID1)
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
 		try {
-		canvas_4(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
+		canvas_4(contract_ID1, tokenID, address, j, -10, box1);
 		//canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
 			}catch(err){
 		canvas_1(contract_ID2, tokenID2, box1);
@@ -1421,7 +1422,7 @@ var acct = (async function(){
 var _image = await k(num1, addr, num2).call();
 //const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
 
-	var lnk = await k.methods.tokenURI(nft_id).call();
+	var lnk = await k.methods.tokenURI(num1).call();
   
   if (lnk.substring(0,4) == "ipfs"){
 	lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7)
