--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1150,7 +1150,8 @@ var display = (async function(){
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
 	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
-	//console.log(contract_ID1)
+	console.log("k" + contract_ID1)
+	console.log("id" + tokenID)
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
 		try {
