--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1193,7 +1193,7 @@ var display = (async function(){
 	array_tokenID2.push(tokenID2);
 	
 	try {
-	canvas_4(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
+	canvas_4(contract_ID2, tokenID2, address, j, 10, box2);
 	//canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
 	 }catch(err){
 		canvas_1(contract_ID2, tokenID2, box2);
