--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1457,7 +1457,7 @@ var acct = (async function(){
    
    //myImgElem.src = imageUrl;
    var img = new Image();
-	img.crossOrigin="anonymous"
+	//img.crossOrigin="anonymous"
 	img.src = image_ //imageUrl
 	//ew1Div.addEventListener("load", getCanvas);
 	img.onload = function (){
