--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1156,7 +1156,7 @@ var display = (async function(){
 	
 		try {
 		//canvas_4(contract_ID1, tokenID, address, j, -10, box1);
-		canvas_4(contract_ID1, tokenID, address, i, i, box1).catch(function(error));
+		canvas_4(contract_ID1, tokenID, address, i, i, box1).catch(function(error);
 		
 			}catch(err){
 		//canvas_4(contract_ID1, tokenID, address, j, -10, box1);
@@ -1197,7 +1197,7 @@ var display = (async function(){
 	
 	try {
 	//canvas_4(contract_ID2, tokenID2, address, j, 10, box2);
-	canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error))
+	canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error)
 		
 	 }catch(err){
 	 canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
